fix image stretch

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -285,6 +285,7 @@ span {
 #sidebar > #user > img {
 	height: 14rem;
 	width: 14rem;
+	object-fit: cover;
 	border-radius: 50%;
 	background-color: var(--plain);
 	filter: drop-shadow(0px 0px 0.5rem rgba(0, 0, 0, 0.5));
